--- a/frontend/src/game/startedGame/tablero.css
+++ b/frontend/src/game/startedGame/tablero.css
@@ -41,33 +41,50 @@ body {
 
 .left-sector,
 .right-sector {
-  margin: 0 10px; /* Ajusta el margen según tus necesidades */
+  margin: 0 10px;
 }
 
 .tri-prime-container {
-  margin: 0 20px; /* Ajusta el margen según tus necesidades */
+  margin: 0 20px;
 }
 
 /* Cartas */
 .cardStyles {
-  margin: '60%';
-  border: '1px solid #ccc';
-  border-radius: '4px';
-  padding: '10px';
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  margin: 10px;
+  max-width: 200px;
+  overflow: hidden;
 }
 
 .buttonStyles {
-  padding: '8px 16px';
-  margin: '4px';
-  font-size: '14px';
-  cursor: 'pointer';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 16px;
+  margin: 4px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
+
 .cardsContainerStyle {
-  display: 'flex';
-  flex-direction: 'row';
-  justify-content: 'space-around';
-  align-items: 'center';
-  flex-wrap: 'wrap';
-  margin-top: '20px';
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+.left-card {
+  order: 1;
+}
+
+.center-card {
+  order: 2;
+}
+
+.right-card {
+  order: 3;
 }
