--- a/frontend/src/game/startedGame/tablero.css
+++ b/frontend/src/game/startedGame/tablero.css
@@ -129,6 +129,16 @@ body {
   margin-top: 20px;
 }
 
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 10px;
+  max-width: 200px;
+  overflow: hidden;
+}
+
 .left-card {
   order: 1;
 }
