--- a/frontend/src/game/startedGame/tablero.css
+++ b/frontend/src/game/startedGame/tablero.css
@@ -54,6 +54,22 @@ body {
   background-color: rgb(31, 232, 31);
 }
 
+.player-0 {
+  color: white;
+}
+
+.player-1 {
+  color: red;
+}
+
+.player-2 {
+  color: blue;
+}
+
+.player-3 {
+  color: rgb(31, 232, 31);
+}
+
 .players-info-container {
   display: flex;
   flex-direction: column;
